--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "React App",
+  "name": "react-app",
   "version": "1.0.0",
   "description": "React: Building Modern Web Apps",
-  "main": "",
+  "main": "/js/app.jsx",
   "scripts": {
     "test": "echo \"Error\" && exit 1",
-    "start": "webpack-dev-server --progress --inline --hot",
+    "start": "webpack-dev-server --inline --hot",
     "build": "webpack --config webpack.config.prod.js -p"
   },
   "repository": {
@@ -19,32 +19,33 @@
   },
   "homepage": "https://github.com/Carmezim/react-blog-app#readme",
   "dependencies": {
-    "normalize.css": "^4.2.0",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0"
-  },
-  "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.11.6",
+    "classnames": "^2.2.5",
     "css-loader": "^0.23.1",
-    "html-webpack-plugin": "^2.22.0",
+    "history": "^3.0.0",
+    "imports-loader": "^0.6.5",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "moment": "^2.14.1",
     "postcss": "^5.1.2",
+    "quill": "^0.20.1",
     "react": "^15.3.0",
+    "react-addons-update": "^15.3.1",
     "react-dom": "^15.3.0",
     "react-hot-loader": "^1.3.0",
-    "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "style-loader": "^0.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-livereload-plugin": "^0.8.1"
+    "superagent": "^2.2.0",
+    "webpack": "^1.13.2"
+  },
+  "devDependencies": {
+    "react-hot-loader": "^1.3.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
