--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-app",
   "version": "1.0.0",
   "description": "React: Building Modern Web Apps",
-  "main": "/js/app.jsx",
+  "main": "",
   "scripts": {
     "test": "echo \"Error\" && exit 1",
     "start": "webpack-dev-server --inline --hot",
@@ -33,13 +33,14 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "moment": "^2.14.1",
-    "postcss": "^5.1.2",
     "quill": "^0.20.1",
     "react": "^15.3.0",
     "react-addons-update": "^15.3.1",
     "react-dom": "^15.3.0",
     "react-hot-loader": "^1.3.0",
     "react-router": "^2.6.1",
+    "reflux": "^0.4.1",
+    "reflux-promise": "^1.0.4",
     "style-loader": "^0.13.1",
     "superagent": "^2.2.0",
     "webpack": "^1.13.2"
